--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,4 +18,4 @@ jobs:
         sudo luarocks install luacheck
     - name: Run luacheck
       run: |
-        luacheck lua/* after/plugin/*
+        luacheck lua/*
