--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,9 +1,10 @@
 name: lint
 
-# on:
-#   pull_request:
-#     branches:
-#       - master
+on:
+  pull_request:
+    branches:
+      - main
+      - initial-migration-setup-rebased
 
 jobs:
   lint:
